--- a/package.json
+++ b/package.json
@@ -2,15 +2,24 @@
   "private": true,
   "name": "image-resizing",
   "version": "1.0.0",
-  "description": "A template for kick starting a Cloudflare Workers project",
+  "description": "Image resizing via Cloudflare Worker resizing API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write '**/*.{js,css,json,md}'"
+    "test": "jest",
+    "lint": "eslint --fix . && echo 'Lint complete.'"
   },
-  "author": "Vortexmind <Vortexmind@users.noreply.github.com>",
+  "author": "Paolo Tagliaferri <me@paolotagliaferri.com>",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-yaml": "^0.3.0",
+    "jest": "^26.4.2",
     "prettier": "^1.18.2"
+  },
+  "dependencies": {
+    "kind-of": "^6.0.3"
   }
 }
