--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ dist: bionic
 language: node_js
 node_js:
     - node
+before_install:
+    - pip install --user codecov
+after_success:
+    - codecov --file coverage/lcov.info --disable search
