--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,10 @@
 {
   "extends": [
     "config:base"
-  ]
+  ],
+  "packageRules": [{
+    "updateTypes": ["minor", "patch", "pin", "digest"],
+    "depTypeList": ["devDependencies"],
+    "automerge": true
+  }]
 }
