--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,4 +4,4 @@ account_id = ""
 workers_dev = true
 route = ""
 zone_id = ""
-vars = { USE_SENTRY = false }
+vars = { USE_SENTRY = false , CUSTOM_HEADER = "" }
