Fix env var overwrite

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,5 +4,5 @@ account_id = ""
 workers_dev = true
 route = ""
 zone_id = ""
-vars = { USE_SENTRY = false , CUSTOM_HEADER = "" }
+vars = { USE_SENTRY = false }
 compatibility_date = "2021-09-24"
