--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,9 @@ jobs:
           secrets: |
             SENTRY_DSN
             CUSTOM_HEADER
+            ALLOWED_ORIGINS
         env:
           CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
           CUSTOM_HEADER: ${{ secrets.CUSTOM_HEADER }}
+          ALLOWED_ORIGINS: ${{ secrets.ALLOWED_ORIGINS }}
