--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
             CUSTOM_HEADER
             ALLOWED_ORIGINS
         env:
-          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
           CUSTOM_HEADER: ${{ secrets.CUSTOM_HEADER }}
           ALLOWED_ORIGINS: ${{ secrets.ALLOWED_ORIGINS }}
