--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_install:
     - pip install --user codecov
 after_success:
     - codecov --file coverage/lcov.info --disable search
+
+- name: NPM Target
+  uses: anna-money/github-actions-npm@v4
