--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,6 @@
 name = "image-resizing"
 workers_dev = true
 node_compat = true
-vars = { USE_SENTRY = false }
 compatibility_date = "2022-07-12"
 main = "./index.js"
-type = "webpack"
+# type = "webpack"
