--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 
 orbs:
   node: circleci/node@5.0.2
+  codecov: codecov/codecov@1.0.2
 
 jobs:
   build_and_test:
@@ -14,6 +15,8 @@ jobs:
       - run:
           command: npm run test
           name: Run tests
+      - codecov/upload:
+          file: {{ coverage_report_filepath }}
 
 workflows:
   test_my_app:
