--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,10 @@
   "extends": [
     "config:base"
   ],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true
+  }
   "packageRules": [{
     "updateTypes": ["minor", "patch", "pin", "digest"],
     "depTypeList": ["devDependencies"],
