--- a/renovate.json
+++ b/renovate.json
@@ -1,14 +1,41 @@
 {
-  "extends": [
-    "config:base"
-  ],
-  "lockFileMaintenance": {
-    "enabled": true,
-    "automerge": true
-  }
-  "packageRules": [{
-    "updateTypes": ["minor", "patch", "pin", "digest"],
-    "depTypeList": ["devDependencies"],
-    "automerge": true
-  }]
+    "extends": [
+        "config:base"
+    ],
+    "lockFileMaintenance": {
+        "enabled": true,
+        "automerge": true
+    },
+    "packageRules": [
+        {
+            "updateTypes": [
+                "minor",
+                "patch",
+                "pin",
+                "digest"
+            ],
+            "depTypeList": [
+                "devDependencies"
+            ],
+            "automerge": true
+        },
+        {
+            "matchDepTypes": [
+                "devDependencies"
+            ],
+            "matchPackagePatterns": [
+                "lint",
+                "prettier"
+            ],
+            "automerge": true
+        },
+        {
+            "matchUpdateTypes": [
+                "minor",
+                "patch"
+            ],
+            "matchCurrentVersion": "!/^0/",
+            "automerge": true
+        }
+    ]
 }
