--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - checkout
       - run:
           name: Upgrade npm
-          command: npm install -g npm@11.4.1
+          command: npm install npm@11.4.1
       - run: rm -rf node_modules package-lock.json
       - run: npm install
       - run:
